<resources>
    <string name="app_name">VK Pokemon</string>
    <string name="pokemon">Pokemon</string>
    <string name="error">Error</string>
    <string name="pokemon_icon">pokemon icon</string>
    <string name="check_connection">Check your internet connection</string>
    <string name="app_error">Application error</string>
    <string name="refresh">Refresh</string>
    <string name="height">Height: %.1f m</string>
    <string name="weight">Weight: %.1f kg</string>
    <string name="forms">Forms: %s</string>
    <string name="abilities">Abilities: %s</string>

</resources>